# halckulator

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
modules/: .gitignore  Makefile.am
po/: .gitignore  Makevars  POTFILES.in
src/: .gitignore  Makefile.am  hcl_application.vala  hcl_main.c  hcl_window.vala  main.c
src/gtk/: .gitignore  Makefile.am  application.vala  manager.vala  message.vala  resources.gresources.xml  window.vala
src/gtk/catalogs/: halckulator.xml
src/gtk/ui/: menu.ui  window.ui
src/mathcore/: .gitignore  Makefile.am  clonable.c  clonable.h  closure.c  closure.h  core.c  core.h  core.vala  function.vala  internal.h  libmathcore.h  libmathcore.vapi  libmathcorext.h  nil.c  number.c  number.h  number.vala  number_patch.c  number_patch.h  numberext.h  numberkind.c  numberkind.h  object.c  object.h  stack.c  stack.h  value.c  value.h
src/mathcore/discrete/: .gitignore  operators.vala
src/mathcore/vapi/: patch.vapi
src/mathlib/: .gitignore  Makefile.am  arithmetics.c  arithmetics.vala  convert.c  convert.h  libmathlib.deps  libmathlib.h  libmathlib.vapi
src/mathlib/vapi/: patch.deps  patch.vapi
src/module/: .gitignore  Makefile.am  hcl_module.vala  hcl_module_entry.h  hcl_module_layout.vala  hcl_module_manager.vala  hcl_patch.c  hcl_patch.h  layout.vala  libhclmodule.h  libhclmodule.vapi  module.c  module.h  module.vala  module_entry.h  module_layout.c  module_layout.h  module_manager.c  module_manager.h  patch.c  patch.h  settings.c  settings.h  version.vala.in
src/module/vapi/: patch.vapi
src/modules/: .gitignore  Makefile.am  builtin.vala  builtin_layout.vala
src/modules/basic/: .gitignore  Makefile.am  basicore.vala  layout.vala  module.vala
src/modules/basic/gtk/: .gitignore  resources.gresources.xml
src/modules/basic/gtk/ui/: layout.ui
src/modules/basic/vapi/: config.vapi
src/modules/contrib/: Readme
src/modules/programmer/: .gitignore  Makefile.am  layout.vala  module.vala  width_button.vala
src/modules/programmer/gtk/: resources.gresources.xml
src/modules/programmer/gtk/ui/: layout.ui  width_button.ui
src/resources/: .gitignore  Makefile.am  bundle.gresources.xml  resources.gresources.xml
src/resources/ui/: .gitignore  message.ui  window.ui
src/settings/: .gitignore  Makefile.am  org.hck.halckulator.gschema.xml
src/vapi/: config.deps  config.vapi
